WIP Introduce combobox for <select> with more options than COMBOBOX_MIN_LIMIT

--- a/frontend/app/assets/stylesheets/archivesspace.less
+++ b/frontend/app/assets/stylesheets/archivesspace.less
@@ -8,5 +8,6 @@
 @import "archivesspace/tables";
 @import "archivesspace/tree";
 @import "datepicker";
+@import "combobox";
 @import "../../codemirror/codemirror.css";
 @import "../../codemirror/util/simple-hint.css";
