Show all components by default in Resource records in the public view.

--- a/public/app/assets/stylesheets/archivesspace/common.less
+++ b/public/app/assets/stylesheets/archivesspace/common.less
@@ -208,6 +208,10 @@ section {
     &.unstriped {
       background-color: #FFF;
     }
+
+    .component-view {
+      margin-left: 15px;
+    }
   }
 
 }
@@ -433,3 +437,9 @@ section {
 pre {
   word-break: break-word;
 }
+
+
+.expand-collapse-btn {
+  float: right;
+}
+
