Plug-ins as subrecords in one amazing commit

--- a/frontend/app/views/accessions/_form.html.erb
+++ b/frontend/app/views/accessions/_form.html.erb
@@ -46,6 +46,8 @@
 <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "classification", :cardinality => :zero_to_one} %>
 <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "user_defined", :cardinality => :zero_to_one} %>
 
+<%= form_plugins_for("accession", form) %>
+
 <div class="form-actions">            
   <button type="submit" class="btn btn-primary"><%= I18n.t("accession._frontend.action.save") %></button>
   <%= link_to I18n.t("actions.cancel"), :back, :class => "btn btn-cancel" %>
