--- a/frontend/app/views/accessions/show.html.erb
+++ b/frontend/app/views/accessions/show.html.erb
@@ -90,6 +90,9 @@
          <% if @accession.user_defined %>
            <%= render :partial => "user_defined/show", :locals => { :user_defined => @accession.user_defined, :context => readonly, :section_id => "accession_user_defined_" } %>
          <% end %>
+
+         <%= show_plugins_for(@accession, readonly) %>
+
        <% end %>
      </div>
    </div>
