--- a/plugins/hello_world/frontend/views/hello_world/index.html.erb
+++ b/plugins/hello_world/frontend/views/hello_world/index.html.erb
@@ -27,7 +27,7 @@
            </tr>
            <% @whosaidhello.each do |who| %>
              <tr>
-             <td><%= who['name'] %></td>
+             <td><%= who['who'] %></td>
              <td><%= who['create_time'] %></td>
              </tr>
            <% end %>
