--- a/frontend/app/views/digital_object_components/_show_inline.html.erb
+++ b/frontend/app/views/digital_object_components/_show_inline.html.erb
@@ -51,6 +51,8 @@
         <% end %>
       <% end %>
 
+      <%= show_plugins_for(@digital_object_component, readonly) %>
+
       <%= readonly_context :digital_object_component, @digital_object_component do |readonly| %>
         <% readonly.emit_template("digital_object_component", @digital_object_component) %>
       <% end %>
