--- a/frontend/app/views/digital_objects/_show_inline.html.erb
+++ b/frontend/app/views/digital_objects/_show_inline.html.erb
@@ -88,6 +88,8 @@
         <% end %>
       <% end %>
 
+      <%= show_plugins_for(@digital_object, readonly) %>
+
       <%= readonly_context :digital_object, @digital_object do |readonly| %>
         <% readonly.emit_template("digital_object", @digital_object) %>
       <% end %>
