--- a/frontend/app/views/agents/name_forms/_agent_software.html.erb
+++ b/frontend/app/views/agents/name_forms/_agent_software.html.erb
@@ -12,5 +12,6 @@
     <%= form.label_and_textfield "qualifier" %>
     <%= form.label_and_textfield "sort_name", {:field_opts => {:automatable => true}, :required => :conditionally}%>
     <%= form.label_and_textfield "sort_name" %>
+    <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "use_dates", :template_erb => "dates/template", :template => "date", :heading_text => I18n.t("name._frontend.section.use_date"), :heading_size => "h4"} %>
   </div>
 <% end %>
