--- a/frontend/app/views/classification_terms/_edit_inline.html.erb
+++ b/frontend/app/views/classification_terms/_edit_inline.html.erb
@@ -20,6 +20,7 @@
           'id' => @classification_term.id,
           'title' => @classification_term.title,
           'jsonmodel_type' => @classification_term.jsonmodel_type,
+          'node_type' => @classification_term.jsonmodel_type,
           'replace_new_node' => controller.action_name === 'create'
         }
     %>
