--- a/frontend/app/views/classifications/_edit_inline.html.erb
+++ b/frontend/app/views/classifications/_edit_inline.html.erb
@@ -21,6 +21,7 @@
            'id' => @classification.id,
            'title' => @classification.title,
            'jsonmodel_type' => @classification.jsonmodel_type,
+           'node_type' => @classification.jsonmodel_type,
            'replace_new_node' => false
          }
     %>
