--- a/frontend/app/views/archival_objects/_edit_inline.html.erb
+++ b/frontend/app/views/archival_objects/_edit_inline.html.erb
@@ -21,6 +21,14 @@
           'title' => @archival_object.label,
           'level' => @archival_object.level==='otherlevel' ? @archival_object.other_level : I18n.t("enumerations.archival_record_level.#{@archival_object.level}", :default => @archival_object.level),
           'jsonmodel_type' => @archival_object.jsonmodel_type,
+          'node_type' => @archival_object.jsonmodel_type,
+          'instance_types' => @archival_object.instances.map{|instance| I18n.t("enumerations.instance_instance_type.#{instance['instance_type']}", :default => instance['instance_type'])},
+          'containers' => @archival_object.instances.map{|instance| instance["container"]}.compact.map {|container|
+            container["type_1"] = I18n.t("enumerations.container_type.#{container["type_1"]}", :default => container["type_1"]) if container["type_1"]
+            container["type_2"] = I18n.t("enumerations.container_type.#{container["type_2"]}", :default => container["type_2"]) if container["type_2"]
+            container["type_3"] = I18n.t("enumerations.container_type.#{container["type_3"]}", :default => container["type_3"]) if container["type_3"]
+            container
+          },
           'replace_new_node' => controller.action_name === 'create'
         }
     %>
