--- a/frontend/app/views/digital_objects/_edit_inline.html.erb
+++ b/frontend/app/views/digital_objects/_edit_inline.html.erb
@@ -25,6 +25,9 @@
            'title' => @digital_object.title,
            'level' => I18n.t("enumerations.digital_object_level.#{@digital_object.level}", :default => @digital_object.level),
            'jsonmodel_type' => @digital_object.jsonmodel_type,
+           'node_type' => @digital_object.jsonmodel_type,
+           'file_versions' => @digital_object.file_versions,
+           'digital_object_type' => I18n.t("enumerations.digital_object_digital_object_type.#{@digital_object.digital_object_type}", :default => @digital_object.digital_object_type),
            'replace_new_node' => false
          }
     %>
