--- a/public/app/views/records/_components.html.erb
+++ b/public/app/views/records/_components.html.erb
@@ -1,50 +1,58 @@
 <%
-   components = whole_tree? ? whole_tree['children'] : children 
+   components = whole_tree? ? whole_tree['children'] : children
    show_full_component = defined?(show_full_component) ? show_full_component : false
-   %>
+%>
 
+
+<% node_id = 0; %>
 <% show_node = lambda do |child, stripe| %>
-  <li class="result <% if stripe %>striped<% else %>unstriped<% end %>">
+<% node_id += 1 %>
+<li class="accordion result <% if stripe %>striped<% else %>unstriped<% end %>">
+  <div class="accordion-heading">
     <h4>
+      <div class="accordion-toggle">
+        <a data-toggle="collapse" href="#<%= "node#{node_id}" %>">
+          <i class="icon-chevron-right"></i>
+          <i class="icon-chevron-down"></i>
+        </a>
+      </div>
       <%= icon_for child["node_type"] %>
       <%= link_to child["title"], :controller => :records, :action => child["node_type"] || child["jsonmodel_type"], :id => child['id'] || JSONModel(child["jsonmodel_type"].intern).id_for(child['uri']), :repo_id => @repository.id %>
     </h4>
+  </div>
+  <div id="<%= "node#{node_id}" %>" class="accordion-body collapse in">
+    <div class="accordion-inner">
+      <% if record_type == 'resource' %>
+        <div class="component-view">
+          <%= render :partial => "archival_object",
+                     :locals => {
+                       :archival_object => ArchivalObjectView.new(child['fullrecord']),
+                       :show_components => false
+                     } %>
+        </div>
+      <% end %>
 
-    <% if show_full_component && record_type == 'resource' %>
-      <div class="component-view">
-        <%= render :partial => "archival_object", 
-                   :locals => {
-                     :archival_object => ArchivalObjectView.new(child['fullrecord']),
-                     :show_components => false
-                   } %>
-      </div>
-    <% end %>
-
-    <% if !child['children'].blank? %>
+      <% if !child['children'].blank? %>
       <ul class="results-list">
-        <% 
+        <%
            child['children'].each_with_index do |subchild, i|
              show_node.call(subchild, ((i % 2) == 0) != stripe)
            end
-        %> 
-    </ul>
-    <% end %>
-
-  </li>
+        %>
+      </ul>
+      <% end %>
+    </div>
+  </div>
+</li>
 <% end %>
 
 <% unless components.blank? %>
   <section id="components">
     <h3>
       <%= I18n.t("#{record_type}._public.section.components") %>
-      <% if defined?(show_expand_collapse) && show_expand_collapse %>
-        <% button_label = I18n.t(show_full_component ? "components.collapse" : "components.expand") %>
 
-        <%= link_to(button_label,
-                    backlink.merge(:components => !show_full_component, :anchor => "components"),
-                    :class => "btn btn-mini expand-collapse-btn") %>
-
-      <% end %>
+      <button id="collapse-all-btn" class="btn btn-mini expand-collapse-btn"><%= I18n.t('components.collapse') %></button>
+      <button id="expand-all-btn" class="btn btn-mini expand-collapse-btn"><%= I18n.t('components.expand') %></button>
     </h3>
 
     <ul class="results-list">
@@ -54,3 +62,20 @@
     </ul>
   </section>
 <% end %>
+
+
+
+<script type="text/javascript">
+  document.ready = function (e) {
+    $('#expand-all-btn').on('click', function () {
+      $('.collapse').not('.in').collapse('show');
+      $('.collapsed').removeClass('collapsed')
+    });
+
+    $('#collapse-all-btn').on('click', function () {
+      $('.collapse').collapse('hide');
+      $('.accordion-toggle a').addClass('collapsed');
+    });
+  };
+</script>
+
