--- a/frontend/app/views/resources/_edit_inline.html.erb
+++ b/frontend/app/views/resources/_edit_inline.html.erb
@@ -24,7 +24,7 @@
            'jsonmodel_type' => @resource.jsonmodel_type,
            'node_type' => @resource.jsonmodel_type,
            'instance_types' => @resource.instances.map{|instance| I18n.t("enumerations.instance_instance_type.#{instance['instance_type']}", :default => instance['instance_type'])},
-           'containers' => @resource.instances.map{|instance| instance["container"]}.compact.map {|container|
+           'containers' => @resource.to_hash["instances"].map{|instance| instance["container"]}.compact.map {|container|
              container["type_1"] = I18n.t("enumerations.container_type.#{container["type_1"]}", :default => container["type_1"]) if container["type_1"]
              container["type_2"] = I18n.t("enumerations.container_type.#{container["type_2"]}", :default => container["type_2"]) if container["type_2"]
              container["type_3"] = I18n.t("enumerations.container_type.#{container["type_3"]}", :default => container["type_3"]) if container["type_3"]
