Indent embedded  results list

--- a/public/app/assets/stylesheets/archivesspace/common.less
+++ b/public/app/assets/stylesheets/archivesspace/common.less
@@ -173,7 +173,7 @@ section {
   border-left: 1px solid #EEE;
   padding-left: 5px;
 
-  li.result > .results-list {
+  li.result .results-list {
     margin-left: 15px;
   }
 
