Comment out db logging; Remove .collapse CSS override; Tweak styles for classification titles in the tree

--- a/frontend/app/assets/stylesheets/archivesspace/tree.less
+++ b/frontend/app/assets/stylesheets/archivesspace/tree.less
@@ -131,6 +131,14 @@
       }
     }
 
+    .classification {
+      a {
+        .title-column {
+          width: 90% !important;
+        }
+      }
+    }
+
     a > .jstree-icon {
       display: inline-block;
       width: 14px;
